fix(discover): fix broken filter dropdowns (caused bij overflow:hidden)

--- a/app/client/stylesheets/components/pu-wrap.sass
+++ b/app/client/stylesheets/components/pu-wrap.sass
@@ -17,6 +17,9 @@
         @media screen and (min-width: $columns_threshold)
             max-width: grid(12) + $spacing-app-pagepadding * 2
 
+        &-filter
+            overflow: visible
+
     &-error
         max-width: grid(11) + $spacing-app-pagepadding * 2
 
